# aegis

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
aegis/: __init__.py  anchor.py  canary.py  capability.py  ccpt.py  cli.py  decision.py  lattice.py  log.py  metrics.py  nonce_store.py  policy.py  session.py
aegis/bench/: __init__.py  corpus.json
aegis/mcp/: __init__.py  wrapper.py
aegis/policies/: default.yaml
aegis/proxy/: __init__.py  adapters.py  app.py  dashboard.py  orchestrator.py  streaming.py
aegis/sdk/: __init__.py  client.py  decision.py
deploy/: docker-compose.yml
deploy/helm/aegis/: Chart.yaml  values.yaml
deploy/helm/aegis/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
design/: cli-demo-rendered.html  cli-demo.py  dashboard-v2.html  dashboard.html  diagram-preview.html  identity.html  palette-previews.html  tokens.css
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INTERFACES.md  MENTAL_MODEL.md  OPERATOR.md  QUICKSTART.md  STABILITY.md  THREAT_MODEL.md  WHO_SHOULD_USE.md
docs/proof/: bench-balanced.txt  mcp-canary-demo.txt  mcp-e2e-output.txt
examples/: indirect_injection_demo.py  quickstart.py
scripts/: build_dashboard_preview.py  strip_em_dashes.py  test_mcp_canary.py  test_mcp_e2e.sh
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
sdk-ts/src/: index.ts
tests/: conftest.py  test_adapters.py  test_anchor.py  test_canary.py  test_capability.py  test_ccpt.py  test_dashboard.py  test_decision.py  test_lattice.py  test_log.py  test_mcp_wrapper.py  test_metrics.py  test_nonce_store.py  test_orchestrator.py  test_policy.py  test_proxy_app.py  test_sdk_decision.py  test_soft_block.py  test_streaming.py  test_streaming_endpoint.py
tests/adversarial/: corpus.json  corpus_loader.py  test_adversarial.py
tests/perf/: harness.py  test_perf_targets.py
tests/security/: test_canary_evasion.py  test_capability_attacks.py  test_crypto.py  test_lattice_bypass.py  test_log_integrity.py  test_proxy_attacks.py
ui/: dashboard.html
ui/landing/: index.html
